// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c24 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c24:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  padding-left: 10px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c26 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c25 {
  display: block;
}

.c21 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c21.hidden {
  visibility: hidden;
}

.c22 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c23 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c19 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c18 {
  background-color: #FFFFFF;
  height: 60px;
}

.c18 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c18.tc-sticky {
  will-change: height,box-shadow;
}

.c18[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c18[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c17 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c17 + .c16 {
  margin-top: -1px !important;
}

.c17:last-child {
  margin-bottom: 30px;
}

.c17.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c10 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: none;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c24 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c23 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c23:first-of-type {
    margin-right: 1.5%;
  }

  .c23:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  line-height: 15px;
  margin-top: 15px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #1D1D1B;
}

.IS3 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS4 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS5 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS6 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS7 {
  margin: 0;
}

.IS8 {
  margin-bottom: 20px;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsive-sc-15gvuj2-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsive__MainContainer-sc-15gvuj2-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsive__HeaderContainer-sc-15gvuj2-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsive__HeaderContainer-sc-15qf29k-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S6"
        >
          <div
            className="c4 responsive__AuthorImageContainer-sc-15qf29k-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S2"
          >
            <div
              className="c5 IS2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6 css-reset-4rbku5 responsive__HeadlineContainer-sc-15qf29k-4 c6 css-text-901oao r-color-1yqk5fa r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j S3"
          >
            Some Headline
          </h1>
          <div
            className="c7 responsive__FlagsContainer-sc-15qf29k-2 c7 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8 css-reset-4rbku5 responsive__StandfirstContainer-sc-15qf29k-9 c8 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S4"
          >
            Some Standfirst
          </h2>
          <div
            className="c9 responsive__MetaContainer-sc-15qf29k-7 c9 css-view-1dbjc4n"
          >
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11 responsive__Separator-sc-15qf29k-8 c11 css-view-1dbjc4n"
            />
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c12 responsive__DatePublicationContainer-sc-15qf29k-1 c12 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S5"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c13 c14 IS8"
        >
          <figure
            className="IS7"
          >
            <div
              className="c14 IS6"
            >
              <div
                className="c14 IS5"
              >
                <div
                  className="IS4"
                >
                  <img
                    className="IS3"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c15 c16 c17"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c18"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c19 responsive__BodyContainer-sc-15gvuj2-3 c19 css-view-1dbjc4n"
      >
        <div>
          <div>
            <div
              className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c21"
        >
          <h2
            className="c22"
          >
            Sponsored
          </h2>
          <div
            className="c23"
          />
          <div
            className="c23"
          />
        </div>
        <p
          className="c24"
        >
          Some content
        </p>
        <div
          className="c25 responsive__PullQuoteContainer-sc-4v1r4q-10 c25 css-view-1dbjc4n"
        >
          <div
            className="c26 responsive__PullQuoteResp-sc-4v1r4q-9 c26 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="c14 IS14"
            >
              <div
                className="c14 IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27 inset-caption__InsetCaptionStyle-la2hkf-0 c27 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30 responsive__SecondaryImg-sc-4v1r4q-7 c30 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31 responsive__InlineImg-sc-4v1r4q-8 c31 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c24 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c24:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  padding-left: 10px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c26 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c25 {
  display: block;
}

.c21 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c21.hidden {
  visibility: hidden;
}

.c22 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c23 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c19 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c18 {
  background-color: #FFFFFF;
  height: 60px;
}

.c18 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c18.tc-sticky {
  will-change: height,box-shadow;
}

.c18[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c18[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c17 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c17 + .c16 {
  margin-top: -1px !important;
}

.c17:last-child {
  margin-bottom: 30px;
}

.c17.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c10 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: none;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c24 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c23 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c23:first-of-type {
    margin-right: 1.5%;
  }

  .c23:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  line-height: 15px;
  margin-top: 15px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #7B0046;
}

.IS3 {
  font-family: Flama-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  margin-bottom: 20px;
}

.IS10 {
  display: none;
}

.IS11 {
  height: 100%;
  width: 100%;
}

.IS12 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS15 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS16 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsive-sc-15gvuj2-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsive__MainContainer-sc-15gvuj2-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsive__HeaderContainer-sc-15gvuj2-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsive__HeaderContainer-sc-15qf29k-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S6"
        >
          <div
            className="c4 responsive__AuthorImageContainer-sc-15qf29k-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S2"
          >
            <div
              className="c5 IS2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6 css-reset-4rbku5 responsive__HeadlineContainer-sc-15qf29k-4 c6 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
          >
            Some Headline
          </h1>
          <div
            className="c7 responsive__FlagsContainer-sc-15qf29k-2 c7 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8 css-reset-4rbku5 responsive__StandfirstContainer-sc-15qf29k-9 c8 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S4"
          >
            Some Standfirst
          </h2>
          <div
            className="c9 responsive__MetaContainer-sc-15qf29k-7 c9 css-view-1dbjc4n"
          >
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11 responsive__Separator-sc-15qf29k-8 c11 css-view-1dbjc4n"
            />
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c12 responsive__DatePublicationContainer-sc-15qf29k-1 c12 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S5"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c13 c14 IS9"
        >
          <figure
            className="IS8"
          >
            <div
              className="c14 IS7"
            >
              <div
                className="c14 IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c15 c16 c17"
        >
          <div
            className="IS10"
          />
          <div>
            <div
              className="c18"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c19 responsive__BodyContainer-sc-15gvuj2-3 c19 css-view-1dbjc4n"
      >
        <div>
          <div>
            <div
              className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c21"
        >
          <h2
            className="c22"
          >
            Sponsored
          </h2>
          <div
            className="c23"
          />
          <div
            className="c23"
          />
        </div>
        <p
          className="c24"
        >
          Some content
        </p>
        <div
          className="c25 responsive__PullQuoteContainer-sc-4v1r4q-10 c25 css-view-1dbjc4n"
        >
          <div
            className="c26 responsive__PullQuoteResp-sc-4v1r4q-9 c26 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
        >
          <figure
            className="IS16"
          >
            <div
              className="c14 IS15"
            >
              <div
                className="c14 IS14"
              >
                <div
                  className="IS13"
                >
                  <div
                    className="IS12"
                  >
                    <video
                      className="video-js IS11"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27 inset-caption__InsetCaptionStyle-la2hkf-0 c27 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30 responsive__SecondaryImg-sc-4v1r4q-7 c30 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31 responsive__InlineImg-sc-4v1r4q-8 c31 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c24 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c24:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  padding-left: 10px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c26 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c25 {
  display: block;
}

.c21 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c21.hidden {
  visibility: hidden;
}

.c22 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c23 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c19 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c18 {
  background-color: #FFFFFF;
  height: 60px;
}

.c18 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c18.tc-sticky {
  will-change: height,box-shadow;
}

.c18[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c18[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c17 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c17 + .c16 {
  margin-top: -1px !important;
}

.c17:last-child {
  margin-bottom: 30px;
}

.c17.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c10 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: none;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c24 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c23 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c23:first-of-type {
    margin-right: 1.5%;
  }

  .c23:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  line-height: 15px;
  margin-top: 15px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #BC3385;
}

.IS3 {
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  margin-bottom: 20px;
}

.IS10 {
  display: none;
}

.IS11 {
  height: 100%;
  width: 100%;
}

.IS12 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS15 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS16 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsive-sc-15gvuj2-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsive__MainContainer-sc-15gvuj2-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsive__HeaderContainer-sc-15gvuj2-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsive__HeaderContainer-sc-15qf29k-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S6"
        >
          <div
            className="c4 responsive__AuthorImageContainer-sc-15qf29k-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S2"
          >
            <div
              className="c5 IS2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6 css-reset-4rbku5 responsive__HeadlineContainer-sc-15qf29k-4 c6 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
          >
            Some Headline
          </h1>
          <div
            className="c7 responsive__FlagsContainer-sc-15qf29k-2 c7 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8 css-reset-4rbku5 responsive__StandfirstContainer-sc-15qf29k-9 c8 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S4"
          >
            Some Standfirst
          </h2>
          <div
            className="c9 responsive__MetaContainer-sc-15qf29k-7 c9 css-view-1dbjc4n"
          >
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11 responsive__Separator-sc-15qf29k-8 c11 css-view-1dbjc4n"
            />
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c12 responsive__DatePublicationContainer-sc-15qf29k-1 c12 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S5"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c13 c14 IS9"
        >
          <figure
            className="IS8"
          >
            <div
              className="c14 IS7"
            >
              <div
                className="c14 IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c15 c16 c17"
        >
          <div
            className="IS10"
          />
          <div>
            <div
              className="c18"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c19 responsive__BodyContainer-sc-15gvuj2-3 c19 css-view-1dbjc4n"
      >
        <div>
          <div>
            <div
              className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c21"
        >
          <h2
            className="c22"
          >
            Sponsored
          </h2>
          <div
            className="c23"
          />
          <div
            className="c23"
          />
        </div>
        <p
          className="c24"
        >
          Some content
        </p>
        <div
          className="c25 responsive__PullQuoteContainer-sc-4v1r4q-10 c25 css-view-1dbjc4n"
        >
          <div
            className="c26 responsive__PullQuoteResp-sc-4v1r4q-9 c26 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
        >
          <figure
            className="IS16"
          >
            <div
              className="c14 IS15"
            >
              <div
                className="c14 IS14"
              >
                <div
                  className="IS13"
                >
                  <div
                    className="IS12"
                  >
                    <video
                      className="video-js IS11"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27 inset-caption__InsetCaptionStyle-la2hkf-0 c27 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30 responsive__SecondaryImg-sc-4v1r4q-7 c30 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31 responsive__InlineImg-sc-4v1r4q-8 c31 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c14 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c24 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c24:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c27 {
  padding-left: 10px;
}

.c20 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c30 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c31 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c26 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c25 {
  display: block;
}

.c21 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c21.hidden {
  visibility: hidden;
}

.c22 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c23 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c28 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c29 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c15 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c19 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c18 {
  background-color: #FFFFFF;
  height: 60px;
}

.c18 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c18.tc-sticky {
  will-change: height,box-shadow;
}

.c18[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c18[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c17 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c17 + .c16 {
  margin-top: -1px !important;
}

.c17:last-child {
  margin-bottom: 30px;
}

.c17.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c10 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: none;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c24 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c20 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c31 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c31 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c25 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c21 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c21 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c23 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c23:first-of-type {
    margin-right: 1.5%;
  }

  .c23:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c28 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c28 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c17 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c17 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  line-height: 15px;
  margin-top: 15px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12px;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: -1;
  padding-top: 1;
  letter-spacing: 1;
  color: #F13D00;
}

.IS3 {
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  margin-bottom: 20px;
}

.IS10 {
  display: none;
}

.IS11 {
  height: 100%;
  width: 100%;
}

.IS12 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS15 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS16 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsive-sc-15gvuj2-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsive__MainContainer-sc-15gvuj2-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsive__HeaderContainer-sc-15gvuj2-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsive__HeaderContainer-sc-15qf29k-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S6"
        >
          <div
            className="c4 responsive__AuthorImageContainer-sc-15qf29k-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S2"
          >
            <div
              className="c5 IS2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6 css-reset-4rbku5 responsive__HeadlineContainer-sc-15qf29k-4 c6 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
          >
            Some Headline
          </h1>
          <div
            className="c7 responsive__FlagsContainer-sc-15qf29k-2 c7 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8 css-reset-4rbku5 responsive__StandfirstContainer-sc-15qf29k-9 c8 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S4"
          >
            Some Standfirst
          </h2>
          <div
            className="c9 responsive__MetaContainer-sc-15qf29k-7 c9 css-view-1dbjc4n"
          >
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11 responsive__Separator-sc-15qf29k-8 c11 css-view-1dbjc4n"
            />
            <div
              className="c10 responsive__Meta-sc-15qf29k-6 c10 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c12 responsive__DatePublicationContainer-sc-15qf29k-1 c12 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S5"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c13 c14 IS9"
        >
          <figure
            className="IS8"
          >
            <div
              className="c14 IS7"
            >
              <div
                className="c14 IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c15 c16 c17"
        >
          <div
            className="IS10"
          />
          <div>
            <div
              className="c18"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c19 responsive__BodyContainer-sc-15gvuj2-3 c19 css-view-1dbjc4n"
      >
        <div>
          <div>
            <div
              className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c21"
        >
          <h2
            className="c22"
          >
            Sponsored
          </h2>
          <div
            className="c23"
          />
          <div
            className="c23"
          />
        </div>
        <p
          className="c24"
        >
          Some content
        </p>
        <div
          className="c25 responsive__PullQuoteContainer-sc-4v1r4q-10 c25 css-view-1dbjc4n"
        >
          <div
            className="c26 responsive__PullQuoteResp-sc-4v1r4q-9 c26 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c20 responsive__PrimaryImg-sc-4v1r4q-5 c20 css-view-1dbjc4n"
        >
          <figure
            className="IS16"
          >
            <div
              className="c14 IS15"
            >
              <div
                className="c14 IS14"
              >
                <div
                  className="IS13"
                >
                  <div
                    className="IS12"
                  >
                    <video
                      className="video-js IS11"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c27 inset-caption__InsetCaptionStyle-la2hkf-0 c27 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c28"
        >
          <h2
            className="c29"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c30 responsive__SecondaryImg-sc-4v1r4q-7 c30 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c31 responsive__InlineImg-sc-4v1r4q-8 c31 css-view-1dbjc4n"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
